Update effective date in Terms.html

--- a/Terms.html
+++ b/Terms.html
@@ -28,4 +28,4 @@ If you have any questions about these Terms, please contact us at: dillon.data.2
 .
 
 ---
-**Effective Date:** [Today's Date, e.g., October 26, 2025]
+**Effective Date:** October 26, 2025
